--- a/index.html
+++ b/index.html
@@ -8,6 +8,40 @@
     <title>desafio github</title>
 </head>
 <body>
-    
+    <main class="grid">
+        <header>
+            <div>
+                <a class="logo1">
+                    <img src="https://mir-s3-cdn-cf.behance.net/projects/404/8f1c41151909093.Y3JvcCw3OTk5LDYyNTcsMCw4NzE.png" alt="logo wos">
+                </a>
+            </div>
+            <nav class="nav-flex pages">
+                <ul class="pages">
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="shows.html">Shows</a></li>
+                    <li><a href="discografía.html">Discografía</a></li>
+                    <li><a href="galería.html">Galería</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </header>
+        <section>
+            <article class="texto">
+                <p class="titulo1">Nosotros</p>
+                <h3 class="texto1">Un grupo de amigos que disfruta de escuchar buena musica juntos, crearon una página con la finalidad de conectar a las personas que escuchan a WOS, además de mantenerlos actualizados con las últimas noticias del artista.</h3>
+                <p class="titulo2">Sobre Wos</p>
+                <h2 class="texto2">Valentín Oliva, mejor conocido por su nombre artístico Wos, es un rapero y ex-freestyler argentino, originario del barrio de Chacarita, en Buenos Aires. Era conocido por sus batallas en El Quinto Escalón y sus múltiples participaciones en competencias de carácter internacional, incluyendo Red Bull Batalla de los Gallos, God Level 2019, Double AA, entre otras. Wos es uno de los que más veces logró ganar la competencia de El Quinto Escalón, fue ganador de la Red Bull Batalla de los Gallos Argentina 2017 en su debut, así clasificando a la internacional, dando un papel digno de un segundo puesto tras perder contra Aczino en la final en México. En 2018 logró el campeonato internacional tras vencer a Aczino en la final, celebrada en su país. Valentín, fuera del ámbito musical, trabaja como actor en series y películas. También tuvo un reconocimiento por parte del Estado Argentino por su labor en las nuevas generaciones.</h2>
+            </article>
+        </section>
+        <footer class="grid-footer">
+            <div class="logo2">
+                <img src="https://mir-s3-cdn-cf.behance.net/projects/404/8f1c41151909093.Y3JvcCw3OTk5LDYyNTcsMCw4NzE.png" alt="logo wos">
+            </div>
+            <section class="contactos">
+            <h3>RRSS</h3>
+            <h3>CONTACTO</h3>
+            </section>
+        </footer>
+    </main>
 </body>
 </html>
